[gd_scene load_steps=5 format=2]

[ext_resource path="res://UI/SkillsUI/PerkButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://UI/SkillsUI/InherentPerksTab.gd" type="Script" id=2]
[ext_resource path="res://UI/FlexGridContainer.gd" type="Script" id=3]
[ext_resource path="res://Game/SmartScrollContainer.gd" type="Script" id=4]

[node name="InherentPerksTab" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="ScrollContainer" type="ScrollContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
margin_right = 1280.0
margin_bottom = 121.0
size_flags_horizontal = 3

[node name="PanelContainer" type="PanelContainer" parent="ScrollContainer/VBoxContainer"]
margin_right = 1280.0
margin_bottom = 28.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer/VBoxContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1273.0
margin_bottom = 21.0
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="NameLabel" type="Label" parent="ScrollContainer/VBoxContainer/PanelContainer/VBoxContainer"]
margin_right = 1266.0
margin_bottom = 14.0
mouse_filter = 1
text = "Shows perks that are inherent to your character."

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
margin_top = 32.0
margin_right = 1280.0
margin_bottom = 121.0

[node name="PanelContainer" type="PanelContainer" parent="ScrollContainer/VBoxContainer/HBoxContainer"]
margin_right = 638.0
margin_bottom = 78.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="PerksContainer" type="VBoxContainer" parent="ScrollContainer/VBoxContainer/HBoxContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 631.0
margin_bottom = 71.0
size_flags_horizontal = 3

[node name="FlexGridContainer" type="Container" parent="ScrollContainer/VBoxContainer/HBoxContainer/PanelContainer/PerksContainer"]
margin_right = 624.0
margin_bottom = 64.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 3 )

[node name="PerkButton" parent="ScrollContainer/VBoxContainer/HBoxContainer/PanelContainer/PerksContainer/FlexGridContainer" instance=ExtResource( 1 )]

[node name="PerkButton2" parent="ScrollContainer/VBoxContainer/HBoxContainer/PanelContainer/PerksContainer/FlexGridContainer" instance=ExtResource( 1 )]
margin_left = 68.0
margin_right = 132.0

[node name="PerkButton3" parent="ScrollContainer/VBoxContainer/HBoxContainer/PanelContainer/PerksContainer/FlexGridContainer" instance=ExtResource( 1 )]
margin_left = 136.0
margin_right = 200.0

[node name="PerkButton4" parent="ScrollContainer/VBoxContainer/HBoxContainer/PanelContainer/PerksContainer/FlexGridContainer" instance=ExtResource( 1 )]
margin_left = 204.0
margin_right = 268.0

[node name="PerkButton5" parent="ScrollContainer/VBoxContainer/HBoxContainer/PanelContainer/PerksContainer/FlexGridContainer" instance=ExtResource( 1 )]
margin_left = 272.0
margin_right = 336.0

[node name="PerkButton6" parent="ScrollContainer/VBoxContainer/HBoxContainer/PanelContainer/PerksContainer/FlexGridContainer" instance=ExtResource( 1 )]
margin_left = 340.0
margin_right = 404.0

[node name="PanelContainer2" type="PanelContainer" parent="ScrollContainer/VBoxContainer/HBoxContainer"]
margin_left = 642.0
margin_right = 1280.0
margin_bottom = 89.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer/VBoxContainer/HBoxContainer/PanelContainer2"]
margin_left = 7.0
margin_top = 7.0
margin_right = 631.0
margin_bottom = 82.0

[node name="PerkNameLabel" type="Label" parent="ScrollContainer/VBoxContainer/HBoxContainer/PanelContainer2/VBoxContainer"]
margin_right = 624.0
margin_bottom = 14.0
mouse_filter = 1
text = "Select a perk on the left"

[node name="MarginContainer" type="MarginContainer" parent="ScrollContainer/VBoxContainer/HBoxContainer/PanelContainer2/VBoxContainer"]
margin_top = 18.0
margin_right = 624.0
margin_bottom = 23.0
rect_min_size = Vector2( 0, 5 )

[node name="PerkDescLabel" type="RichTextLabel" parent="ScrollContainer/VBoxContainer/HBoxContainer/PanelContainer2/VBoxContainer"]
margin_top = 27.0
margin_right = 624.0
margin_bottom = 42.0
mouse_filter = 1
bbcode_enabled = true
bbcode_text = "Description will be shown here"
text = "Description will be shown here"
fit_content_height = true

[node name="MarginContainer2" type="MarginContainer" parent="ScrollContainer/VBoxContainer/HBoxContainer/PanelContainer2/VBoxContainer"]
margin_top = 46.0
margin_right = 624.0
margin_bottom = 51.0
rect_min_size = Vector2( 0, 5 )

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainer/VBoxContainer/HBoxContainer/PanelContainer2/VBoxContainer"]
margin_top = 55.0
margin_right = 624.0
margin_bottom = 75.0

[node name="TogglePerkButton" type="Button" parent="ScrollContainer/VBoxContainer/HBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer"]
margin_right = 624.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Toggle perk on/off"

[connection signal="pressed" from="ScrollContainer/VBoxContainer/HBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer/TogglePerkButton" to="." method="_on_TogglePerkButton_pressed"]
